<resources>
  <string name="app_name">App Name</string>
  <string name="home_welcome">Welcome</string>
  <string name="setting_title">⚙️ Setting</string>
  <string name="setting_excelExport">📊 Excel Export</string>
  <string name="setting_githubExport">💻 GitHub Import</string>
  <string name="setting_friend">Friend</string>
  <string name="setting_addFriend">Add Friend</string>
  <string name="setting_changeLanguage">Change Language</string>
  <string name="setting_countporject">You have %1$s projects</string>
  <string name="setting_deleteAccount">Delete Account</string>
  <string name="setting_logOut">Log Out</string>
  <string name="setting_titleFunc">Feature</string>
  <string name="setting_titleSocial">Social</string>
  <string name="setting_titleApplication">Application</string>
  <string name="setting_titleDangerous">Warring</string>
  <string name="logout_success">Log Out Success!!</string>
  <string name="AddProject_enterName">Input the name of the project</string>
  <string name="AddProject_enterSummary">Input the summary of the project</string>
  <string name="AddProject_enterManager">Select the member</string>
  <string name="AddProject_hint">Please select multiple project members to manage the project</string>
  <string name="AddProject_Title">NEW PROJECT</string>
  <string name="AddProject_Name">Project Name</string>
  <string name="AddProject_Summary">Project Summary</string>
  <string name="AddProject_Manager">Project Members</string>
  <string name="AddProject_btn">ADD</string>
  <string name="AddProject_success">Succeed</string>
  <string name="AddProject_fail">Failed</string>
  <string name="AddProject_NoAccount">The account doesn\'t exist.</string>
  <string name="IssueList_Error">Got an error during the process:</string>
  <string name="IssueList_Designe">Designee:</string>
  <string name="item_project_title">ProjectName: %1$s</string>
  <string name="item_project_summary">Summary: %1$s</string>
  <string name="changeLanguage_success">Language switched to English</string>
  <string name="menu_home">Home</string>
  <string name="menu_Add">Add</string>
  <string name="menu_settings">Settings</string>
  <string name="AddIssue_Title">New Issue</string>
  <string name="AddIssue_Name">Topic</string>
  <string name="AddIssue_Summary">Summary</string>
  <string name="AddIssue_StartTime">Start Time</string>
  <string name="AddIssue_EndTime">End Time</string>
  <string name="AddIssue_Status">Status</string>
  <string name="AddIssue_Designee">Designee</string>
  <string name="AddIssue_btn">Save</string>
  <string name="hint_create_issue_name">Enter issue name</string>
  <string name="hint_create_issue_summary">Enter issue summary</string>
  <string name="hint_create_start_date">Select start date</string>
  <string name="hint_create_end_date">Select end date</string>
  <string name="hint_create_assignee">Select assignee</string>
  <string name="EditIssue_Title">Edit Issue</string>
  <string name="EditIssue_Topic">Topic</string>
  <string name="EditIssue_Summary">Summary</string>
  <string name="EditIssue_StartTime">Start Time</string>
  <string name="EditIssue_EndTime">End Time</string>
  <string name="EditIssue_Status">Status</string>
  <string name="EditIssue_Designee">Designee</string>
  <string name="EditIssue_Save">Save</string>
  <string name="EditIssue_Discard">Discard</string>
  <string name="hint_issue_name">Enter issue name</string>
  <string name="hint_status_description">Enter status description</string>
  <string name="hint_start_date">Select start date</string>
  <string name="hint_end_date">Select end date</string>
  <string name="hint_assignee">Enter assignee</string>
  <string name="Month1">Jan</string>
  <string name="Month2">Feb</string>
  <string name="Month3">Mar</string>
  <string name="Month4">Apr</string>
  <string name="Month5">May</string>
  <string name="Month6">Jun</string>
  <string name="Month7">Jul</string>
  <string name="Month8">Aug</string>
  <string name="Month9">Sep</string>
  <string name="Month10">Oct</string>
  <string name="Month11">Nov</string>
  <string name="Month12">Dec</string>
  <string name="Gantt_Month">Month</string>
  <string name="Gantt_Issue">Issue</string>
  <string name="register_all_fields_required">All fields are required</string>
  <string name="register_password_min_length">Password must be at least 6 characters</string>
  <string name="register_check_network">Please check your network connection</string>
  <string name="register_registering">Registering…</string>
  <string name="register_success">Registration successful!</string>
  <string name="register_sync_failed">Data synchronization failed, please login again</string>
  <string name="register_failed">Registration failed</string>
  <string name="register_email_already_used">This email address is already in use</string>
  <string name="register_email_badly_formatted">Email format is incorrect</string>
  <string name="register_weak_password">Password is too weak</string>
  <string name="register_network_error">Network connection error, please try again later</string>
  <string name="register_email_invalid_format">Please enter a valid email format</string>
  <string name="please_enter_email_password">Please enter email and password</string>
  <string name="login_success">Login successful</string>
  <string name="login_failed">Login failed</string>
  <string name="email_not_registered">This email is not registered</string>
  <string name="email_format_incorrect">Email format is incorrect</string>
  <string name="github_input_title">Enter GitHub Username</string>
  <string name="github_confirm">Confirm</string>
  <string name="github_cancel">Cancel</string>
  <string name="github_import_success">Import successful</string>
  <string name="github_import_error">Error occurred: %1$s</string>
  <string name="delete_account_title">Delete Account</string>
  <string name="delete_account_message">Are you sure you want to delete your account?\n\nThis operation will:\n• Delete all your project data\n• Delete your friend relationships\n• Permanently delete your account\n\nThis operation cannot be undone!</string>
  <string name="delete_account_confirm">Confirm Delete</string>
  <string name="delete_account_cancel">Cancel</string>
  <string name="password_confirm_title">Confirm Password</string>
  <string name="password_confirm_message">Please enter your password to confirm account deletion:</string>
  <string name="password_hint">Please enter password</string>
  <string name="password_confirm_delete">Confirm Delete</string>
  <string name="password_required">Please enter password</string>
  <string name="deleting_account">Deleting account…</string>
  <string name="user_auth_failed">User authentication failed</string>
  <string name="cannot_get_email">Cannot get user email</string>
  <string name="password_verification_failed">Password verification failed</string>
  <string name="password_incorrect">Incorrect password, please try again</string>
  <string name="delete_local_data_failed">Failed to delete local data: %1$s</string>
  <string name="account_deleted_success">Account successfully deleted</string>
  <string name="account_delete_failed">Account deletion failed, please try again later</string>
  <string name="account_data_cleared">Account data cleared</string>
  <string name="project_count_query_failed">Failed to get project count: %1$s</string>
  <string name="Login_Title">Welcome</string>
  <string name="Login_Email">Email</string>
  <string name="Login_Password">Password</string>
  <string name="Login_Btn">Login</string>
  <string name="Login_unregister">Didn\'t register?</string>
  <string name="Register_Title">Register</string>
  <string name="Register_Account">Account</string>
  <string name="Register_Password">Password</string>
  <string name="Register_Email">Email</string>
  <string name="Register_btn">Register</string>
  <string name="Register_HaveAccount">Have Account?</string>
  <string name="Login_translate">translate</string>
  <string name="setting_deleteProject">Delete Project</string>
  <string name="EditIssue_Delete">Delete Issue</string>
  <string name="delete_issue_title">Confirm Delete</string>
  <string name="delete_issue_message">Are you want to delete \"%s\"?  This action can not be undone.</string>
  <string name="delete_issue_confirm">Confirm Delete</string>
  <string name="delete_issue_cancel">Cancel</string>
  <string name="delete_issue_success">Deleted successfully</string>
  <string name="delete_issue_failed">Failed to delete: %s</string>
  <string name="delete_project_title">Confirm Project Deletion</string>
  <string name="delete_project_message">Are you sure you want to delete project \"%s\"?</string>
  <string name="delete_project_message_with_issues">Are you sure you want to delete project \"%s\"?\n\nThis project contains %d issues. Deleting the project will also delete these</string>
  <string name="delete_project_confirm">Confirm Delete</string>
  <string name="delete_project_cancel">Cancel</string>
  <string name="delete_project_success">Project \"%s\" deleted successfully</string>
  <string name="delete_project_failed">Failed to delete project: %s</string>
  <string name="project_id_not_found">Unable to get project information</string>
  <string name="friend">Friend</string>
  <string name="friend_email">Email:</string>
  <string name="friend_account">Account:</string>
  <string name="friend_id">ID</string>
  <string name="friend_add">Add Friend</string>
  <string name="friend_delete">Delete Friend</string>
  <string name="add_member_button">Add</string>
  <string name="select_member">Select Member</string>
  <string name="project_members">Project Members</string>
  <string name="remove_member">Remove</string>
  <string name="member_already_selected">This member has already been selected</string>
  <string name="member_added_success">Member added: %s</string>
  <string name="member_removed_success">Member removed: %s</string>
  <string name="please_select_member">Please select or enter a member account</string>
  <string name="at_least_one_member">Please select at least one project member</string>
  <string name="only_members_can_delete">Only project members can delete projects</string>
  <string name="issue_can_only_assign_to_members">Issues can only be assigned to project members</string>
  <string name="available_members_count">Issues can only be assigned to project members (total %d members)</string>
  <string name="no_project_members">Warning: This project has no members, cannot create issues</string>
  <string name="add_project_delbtn">Delete</string>
  <string name="delete_project_members_info">This will also remove %d project members associations</string>
  <string name="delete_project_not_found">Project deletion failed: Project not found</string>
  <string name="database_init_failed">Database initialization failed: %s</string>
  <string name="views_init_failed">Interface component loading failed, please check layout file</string>
  <string name="data_setup_failed">Data setup failed: %s</string>
  <string name="member_account_required">Please select or enter a member account first</string>
  <string name="member_account_not_found">Account "%s" not found, please confirm the account is correct</string>
  <string name="loading_accounts_error">Error loading account list: %s</string>
  <string name="project_name_required">Please enter project name</string>
  <string name="project_summary_required">Please enter project summary</string>
  <string name="project_member_required">Please select at least one project member</string>
  <string name="project_create_success">Project "%s" created successfully!</string>
  <string name="project_create_failed">Project creation failed, please try again</string>
  <string name="project_create_partial_success">Project created successfully, but some members failed to add</string>
  <string name="form_cleared">Form cleared</string>
</resources>