<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".GanttActivity">

  <LinearLayout
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="100px"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/borderline">

    <ImageButton
      android:id="@+id/btn_backToIssueList"
      android:layout_width="100px"
      android:layout_height="100px"
      android:layout_weight="1"
      app:srcCompat="@drawable/back"
      android:background="@drawable/borderline" />

    <TextView
      android:id="@+id/tv_issueName"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="7"
      android:text="TextView"
      android:textAlignment="center"
      android:textSize="24sp"
      android:textStyle="bold"
      android:background="@drawable/borderline" />

    <TextView
      android:id="@+id/tv_nowDate"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_weight="7"
      android:text="TextView"
      android:textAlignment="center"
      android:textSize="24sp"
      android:textStyle="bold"
      android:background="@drawable/borderline" />

  </LinearLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/stroke"
          android:layout_width="120dp"
          android:layout_height="40dp"
          android:layout_weight="1"
          android:background="@drawable/borderline"
          android:padding="2dp">

          <TextView
              android:id="@+id/textView27"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/Gantt_Month"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <TextView
              android:id="@+id/textView28"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/Gantt_Issue"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rcv_ganttIssue"
          android:layout_width="120dp"
          android:layout_height="match_parent"
          android:layout_weight="15" />
      </LinearLayout>

      <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="150"
        android:background="@drawable/borderline">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:background="@drawable/borderline"
          android:orientation="vertical">

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/borderline"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month1"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month2"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month3"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month4"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month5"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month6"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month7"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month8"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month9"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month10"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month11"
                android:textAlignment="center"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/borderline"
                android:text="@string/Month12"
                android:textAlignment="center"
                android:textSize="11sp" />
          </LinearLayout>

          <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_ganttMonth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@drawable/borderline" />

        </LinearLayout>
      </HorizontalScrollView>
    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>